tests/expression/function_uncallable_type.sy
start :: fn {
    f := fn i: int {
        i()
    }
    f
}

// error: $Violating(Type::Int)
